objects/SCVSimulator_Conversation_Message__c.object
<CustomObject>
    <fields>
        <fullName>Conversation_Order__c</fullName>
        <label>Conversation Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCVSimulator_Conversation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCV Simulator Conversation</label>
        <referenceTo>SCVSimulator_Conversation__c</referenceTo>
        <relationshipLabel>SCV Simulator Conversation Messages</relationshipLabel>
        <relationshipName>SCVSimulator_Conversation_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SCV Simulator Conversation Message</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>SCV Simulator Conversation Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCV Simulator Conversation Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>